--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,9 @@ body {
     background-color:#FFFFFF;
 }
 
-:root {
-    --accent-color: #404bbf;
-    --icon-fill-color: #f4f4fd;
-}
 .container{
-    max-width: 1158px;
-    padding: 0 15px;
+    max-width: 320px;
+    padding: 0 16px;
     margin: 0 auto;
 }
 
@@ -24,8 +20,11 @@ ol {
 h1, h2, h3, h4, h5, h6, p {
 margin: 0;
 }
+
 img{
     display: block;
+    max-width: 100%;
+    height:avto;
 }
 a {
     text-decoration: none;
@@ -45,11 +44,14 @@ a {
 .header-container{
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header-nav{
     display: flex;
     align-items: center;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .logo{
@@ -81,7 +83,7 @@ a {
 }
 
 .nav-link{
-    display: flex;
+    display: none;
     align-items: center;
     gap: 40px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -133,10 +135,11 @@ a {
 
 
 .address-item{
-   display: flex;
+   display: none;
    align-items: center;
    gap: 40px;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
 
 .address-style{
@@ -144,6 +147,19 @@ a {
    margin-left: auto;
 
 }
+
+.burger-btn{
+    padding: 0;
+    border: none;
+    background-color: transparent;
+
+}
+
+.burger-icon{
+    display: block;
+    fill: #2f2f37;
+}
+
 .address-link{
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -238,21 +254,26 @@ a {
 .item-text {
     display: flex;
     align-items: center;
-    gap: 24px;
+    gap: 72px;
+    flex-direction: column;
 }
-.text-list{
+/* .text-list{
     width: calc((100% - 72px) / 4);
+} */
+
+.text-list{
+    width: 100%;
 }
 .icons-text-container{
-border: 1px solid #8e8f99;
-border-radius: 4px;
-width: 264px;
-height: 112px;
-background: #f4f4fd;
-margin-bottom: 8px;
-display: flex;
-align-items: center;
-justify-content: center;
+   border: 1px solid #8e8f99;
+   border-radius: 4px;
+   width: 264px;
+   height: 112px;
+   background: #f4f4fd;
+   margin-bottom: 8px;
+   display: none;
+   align-items: center;
+   justify-content: center;
 }
 
 .desc-page {
@@ -261,11 +282,27 @@ justify-content: center;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    font-weight: 700;
+    font-size: 36px;
+    margin-bottom: 8px;
+    text-align: center;
+
+}
+
+.desc-page-p{
+    font-family: "Roboto",
+     sans-serif;
+     /* line-height: 24px; */
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
     font-weight: 500;
     font-size: 20px;
     margin-bottom: 8px;
-
+    text-align: start; 
 }
+
+
 
 .desc-page-text {
     font-family: "Roboto", sans-serif;
@@ -273,7 +310,7 @@ justify-content: center;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 16px;
 }
 
@@ -306,6 +343,7 @@ padding: 32px 0 32px;
     display: flex;
      gap: 24px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .item-team {
@@ -323,28 +361,28 @@ padding: 32px 0 32px;
 }
 
 .desc-page-user{
-font-family: "Roboto", sans-serif;
-/* line-height: 24px; */
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
-        font-weight: 500;
-        font-size: 20px;
-        margin-bottom: 8px;
-        text-align: center;
+    font-family: "Roboto", sans-serif;
+      /* line-height: 24px; */
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    font-weight: 500;
+    font-size: 20px;
+    margin-bottom: 8px;
+    text-align: center;
 }
 
 .desc-text{
-font-family: "Roboto", sans-serif;
-font-weight: 400;
-font-size: 16px;
+     font-family: "Roboto", sans-serif;
+     font-weight: 400;
+     font-size: 16px;
     
- /* line-height: 24px; */
-line-height: 1.5;
-letter-spacing: 0.02em;
-text-align: center;
-color: #434455;
-margin-bottom: 8px;
+     /* line-height: 24px; */
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+    margin-bottom: 8px;
 }
 
 .social-link-list {
@@ -425,29 +463,29 @@ margin-bottom: 8px;
 
 
 .overlay-text{
-font-weight: 400;
-font-size: 16px;
-position: absolute;
-line-height: 24px;
-line-height: 150%;
-letter-spacing: 0.02em;
-color: #f4f4fd;
-padding: 40px 32px;
-height: 100%;
-background-color: #4d5ae5;
-top: 0;
-width: 100%;
-transform: translateY(100%);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-weight: 400;
+    font-size: 16px;
+    position: absolute;
+    line-height: 24px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    height: 100%;
+    background-color: #4d5ae5;
+    top: 0;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 .box-portf{
-border-bottom: 1px solid #e7e9fc;
-border-left: 1px solid #e7e9fc;
-border-right: 1px solid #e7e9fc;
-padding: 32px 16px;
-width: 360px;
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+    /* width: 360px; */
 }
 
 /* footer*/
@@ -473,14 +511,15 @@ width: 360px;
 .footer-text{
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-        font-size: 16px;
+    font-size: 16px;
     
         /* line-height: 24px; */
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
-        margin-top: 16px;
-        max-width: 264px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    margin-top: 16px;
+    max-width: 264px;
+    margin-bottom: 72px;
 }
 .footer-logo{
     margin-bottom: 16px;
@@ -488,8 +527,9 @@ width: 360px;
 
 .footer-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: baseline;
+
 }
 .footer-item{
     display: flex;
@@ -505,6 +545,7 @@ width: 360px;
     color: #fff;
     margin-bottom: 16px;
     display: flex;
+    justify-content: center;
 }
 
 
@@ -529,22 +570,34 @@ width: 360px;
 }
 
 .logo-box{
-    margin-right: 120px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
 }
 
 .social-box{
-    margin-right: 80px;
+    /* margin-right: 80px; */
+    margin: 0 auto;
+    margin-bottom: 72px;
+    
 }
 
 .form-footer{
     display: flex;
-    gap: 24px;
+    /* gap: 24px; */
+    gap: 16px;
+    flex-direction: column;
+    align-items: center;
 }
 
-.footer-form-box{
-    width: 453px;
+/* .footer-form-box{
     height: 80px;
-}
+} */
+ .footer-form-box{
+    width: 288px;
+    max-width: 100%;
+ }
 
 .title-footer-form{
     font-weight: 500;
@@ -555,10 +608,24 @@ width: 360px;
     color: #fff;
 }
 
+.footer-social-subsc{
+    font-weight: 500;
+    font-size: 16px;
+    
+        /* line-height: 24px; */
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: center;
+}
+
+
 .footer-form-send{
     border: 1px solid #fff;
     border-radius: 4px;
-    width: 264px;
+    width: 288px;
     height: 40px;
     background-color: transparent;
     font-size: 12px;
@@ -595,7 +662,6 @@ width: 360px;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:16px;
 }
 
 .btn-tg:hover,
@@ -607,8 +673,13 @@ width: 360px;
     margin-left: 16px;
 }
 
+
 /* modal-page */
 
+:root {
+    --accent-color: #404bbf;
+    --icon-fill-color: #f4f4fd;
+}
 
 .modal{
     position: fixed;
@@ -854,4 +925,99 @@ margin-bottom: 16px;
 .button-send:hover,
 .button-send:focus{
     background-color: #404bbf;
+}
+
+@media (min-width: 768px) {
+
+.container{
+ max-width: 100%;
+}
+.nav-link {
+    display: flex;
+    }
+.icon-hed{
+ display: none;
+}
+.address-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 12px;
+}
+.address-tab{
+    padding: 0;
+    font-size: 12px;
+}
+.header-logo{
+    margin: 0;
+}
+.address-style{
+    margin: 0;
+}
+.item-text {
+    flex-direction: row;
+    gap: 40px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.text-list {
+    width: calc((100% - 80px) / 2);
+ }
+.portfolio-item{
+    width: 356px;
+}
+.burger-btn {
+   display: none;
+
+}
+.footer-page{
+    padding-top: 96px;
+}
+.footer-container{
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.logo-box{
+    margin-right: 24px;
+    margin-left: 108px;
+}
+
+.social-box{
+    margin: 0;
+}
+.footer-form-box{
+    margin-left: 108px;
+}
+.title-footer-form{
+    margin: 0;
+}
+.form-footer{
+     flex-direction: row;
+}
+}
+
+
+
+
+
+
+@media (min-width: 1158px) {
+    
+.container{
+    max-width: 1158px;
+    padding: 0 15px;  
+    }
+
+.address-item {
+   flex-direction: row;
+    }
+.text-list {
+    width: calc((100% - 72px) / 4);
+}
+.burger-btn {
+   display: none;
+
+}
+
 }
